fix: wrong color for completed paths in light mode

--- a/src/features/LevelFooter/LevelFooter.module.css
+++ b/src/features/LevelFooter/LevelFooter.module.css
@@ -64,6 +64,7 @@
       &.completed {
         background-color: var(--primary-color);
         border-color: var(--primary-border-color);
+        color: white;
 
         .pathResult {
           opacity: 0;
